--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,11 +20,13 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="create">Create</a>
+          <a class="nav-link" routerLink="edit/0">Create</a>
         </li>
       </ul>
     </div>
   </nav>
+  <div *ngIf="isShowIndicator" class="spinner"></div>
+
   <div class="outer-outlet">
     <router-outlet></router-outlet>
   </div>
