--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" routerLink="list"
-            >List <span class="sr-only">(current)</span></a
+            >Lists <span class="sr-only">(current)</span></a
           >
         </li>
         <li class="nav-item">
