--- a/src/app/employees/list-employees.component.html
+++ b/src/app/employees/list-employees.component.html
@@ -12,10 +12,12 @@
 </h1>
 <div *ngFor="let employee of employees | employeeFilter: searchTerm">
   <!-- <div (click)="onClick(employee.id)" class="pointerCursor"> -->
-    <app-display-employee
-      [employee]="employee" [searchTerm]="searchTerm"
-      (notify)="handleNOtify($event)"
-    ></app-display-employee>
+  <app-display-employee
+    [employee]="employee"
+    [searchTerm]="searchTerm"
+    (notify)="handleNOtify($event)"
+    (notifyDelete)="onNofificationDeleteEvent($event)"
+  ></app-display-employee>
   <!-- </div> -->
 </div>
 
